--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Torben's Blog
 
 # Short bio or description (displayed in the header)
-description: about.me/torbenjaeger
+description: https://about.me/torbenjaeger
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://s.gravatar.com/avatar/8459a830819790b7dfbeb4658e16e7a5
 
 #
 # Flags below are optional
@@ -18,18 +18,18 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: jicken@gmail.com
+  facebook: meisterjaeger
   flickr:
-  github: barryclark/jekyll-now
+  github: j1cken/j1cken.github.io
   instagram:
-  linkedin:
+  linkedin: torbenjaeger
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: torbenjaeger
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
+  googleplus: u/1/111968302665998576155 # anything in your profile username that comes after plus.google.com/
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
