--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
   - 2.4.1
 script:
   - bundle exec jekyll build
-  #- bundle exec htmlproofer ./_site --only-4xx --check-html
+  - bundle exec htmlproofer ./_site --only-4xx --check-html
 env:
   global:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
